--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -106,7 +106,7 @@ jobs:
         echo "SEMVER_PIP_FORMAT=$WHEEL_VERSION" >> $GITHUB_OUTPUT  # to be used in other jobs
 
     - name: Install external dependencies at runtime (todo move to build-time inside a custom image runner)
-      run: sudo apt-get install -y --install-recommends ffmpeg
+      run: sudo apt-get update && sudo apt-get install -y --install-recommends ffmpeg
 
     - name: Run Unit Tests
       run: tox -vv -s false
