hard-deactivate the documentation tests on CI

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -134,12 +134,12 @@ jobs:
         mv ".tox/${DIST_DIR}/music_album_creation-${PKG_VERSION}.tar.gz" "${DIST_DIR}"
         mv ".tox/${DIST_DIR}/music_album_creation-${PKG_VERSION}-py3-none-any.whl" "${DIST_DIR}"
         tox -e check -vv -s false
-    - name: Install documentation test dependencies
-      if: ${{ matrix.platform == 'macos-latest' && matrix.python-version != '3.6' }}
-      run: brew install enchant
-    - name: Run Documentation Tests
-      if: ${{ matrix.platform == 'ubuntu-latest' || matrix.python-version  != '3.6' }}
-      run: tox -e docs --sitepackages -vv -s false
+    # - name: Install documentation test dependencies
+    #   if: ${{ matrix.platform == 'macos-latest' && matrix.python-version != '3.6' }}
+    #   run: brew install enchant
+    # - name: Run Documentation Tests
+    #   if: ${{ matrix.platform == 'ubuntu-latest' || matrix.python-version  != '3.6' }}
+    #   run: tox -e docs --sitepackages -vv -s false
     - name: Upload Source & Wheel distributions as Artefacts
       uses: actions/upload-artifact@v3
       with:
