--- a/tox.ini
+++ b/tox.ini
@@ -237,6 +237,26 @@ deps = bandit[toml]
 skip_install = true
 commands = bandit -r -c pyproject.toml {posargs:src tests}
 
+[testenv:prospector]
+description = Run multiple static code analysis tools defined in .prospector.yml
+    Runs the prospector tool which brings together the functionality of other
+    Python analysis tools such as Pyflakes and McCabe complexity.
+    We run tools: Pyflakes, Pyroma, McCabe and Dodgy
+deps = prospector[with_pyroma] == 1.3.1
+skip_install = true
+changedir = {toxinidir}
+commands_pre =
+    # We do not run pylint, since we have a dedicated pylint env for it.
+    # Prospector still tries to read .pylintrc, which causes a crash (because .pylintrc was generated with a pylint version higher than the one supported by prospector)
+    # So we temporarily "hide" .pylintrc from prospector
+    python -c 'import os; f = ".pylintrc"; exec("if os.path.exists(f):\n    os.rename(f, \".pylintrc-bak\")")'
+commands =
+    prospector src
+    prospector tests
+commands_post =
+    # We "restore" .pylintrc (to be available to the pylint env command)
+    python -c 'import os; f = ".pylintrc-bak"; exec("if os.path.exists(f):\n    os.rename(f, \".pylintrc\")")'
+
 [testenv:pylint]
 description = Run the Pylint tool to analyse the Python code and output
     information about errors, potential problems and convention violations
