--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -26,6 +26,9 @@ env:
   UBUNTU_PY310_STRATEGY: "{\"platform\":[\"ubuntu-latest\"], \"python-version\":[\"3.10\"]}"
   TEST_STRATEGY: "{\"platform\":[\"ubuntu-latest\", \"macos-latest\", \"windows-latest\"], \"python-version\":[\"3.9\"]}"
 
+  # Lint Matrix
+  LINT_MATRIX: "{\"platform\":[\"ubuntu-latest\", \"macos-latest\", \"windows-latest\"], \"python-version\":[\"3.10\"]}"
+
   # On/Off switches for the various CI/CD steps
   # If false the step prevented from running
   # If true the step is allowed to run (it still may be skipped on other runtime conditions)
@@ -49,6 +52,7 @@ jobs:
       DRAW_DEPS_SVG_GRAPHS: ${{ steps.pass-env-to-output.outputs.DRAW_DEPS_SVG_GRAPHS }}
       RUN_LINT: ${{ steps.pass-env-to-output.outputs.RUN_LINT }}
       PUBLISH_ON_PYPI: ${{ steps.pass-env-to-output.outputs.PUBLISH_ON_PYPI }}
+      LINT_MATRIX: ${{ steps.pass-env-to-output.outputs.LINT_MATRIX }}
     steps:
       - name: Pass 'env' section variables to GITHUB_OUTPUT
         id: pass-env-to-output
@@ -65,6 +69,7 @@ jobs:
           echo "TESTS_ENABLED=$RUN_UNIT_TESTS" >> $GITHUB_OUTPUT
           echo "DOCKER_ENABLED=$BUILD_DOCKER" >> $GITHUB_OUTPUT
           echo "PUBLISH_ON_PYPI=$PUBLISH_ON_PYPI" >> $GITHUB_OUTPUT
+          echo "LINT_MATRIX=$LINT_MATRIX" >> $GITHUB_OUTPUT
 
 # RUN TEST SUITE ON ALL PLATFORMS
   test_suite:
@@ -300,7 +305,7 @@ jobs:
     needs: set_github_outputs
     if: ${{ needs.set_github_outputs.outputs.RUN_LINT == 'true' }}
     strategy:
-      matrix: ${{fromJson(needs.set_github_outputs.outputs.matrix)}}
+      matrix: ${{fromJson(needs.set_github_outputs.outputs.LINT_MATRIX)}}
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
