--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -181,11 +181,11 @@ jobs:
     if: needs.set_github_outputs.outputs.DOCKER_ENABLED == 'true'
     env:
       DOCKER_USER: ${{ secrets.DOCKER_USER }}
-      IMAGE_NAME: "create-album"
     steps:
     - uses: actions/checkout@v3
     - name: Build 'n Push Docker Image to DockerHub
       run: |
+        IMAGE_NAME="create-album"
         # this Job is realized inside a workflow enabled for branches and v* tags
         IMAGE_TAG="${GITHUB_REF_NAME}"  # this is branch name or tag name
         echo "IMAGE_REF=${IMAGE_NAME}:${IMAGE_TAG}" >> $GITHUB_ENV
