--- a/tox.ini
+++ b/tox.ini
@@ -132,6 +132,37 @@ commands =
 depends = build
 
 
+### DEPLOYMENT
+[testenv:deploy]
+# Deploy to test.pypi.org : TWINE_USERNAME=user TWINE_PASSWROD=pass PACKAGE_DIST_VERSION=1.0.0 tox -e deploy
+# Deploy to pypi.org      : TWINE_USERNAME=user TWINE_PASSWROD=pass PACKAGE_DIST_VERSION=1.0.0 PYPI_SERVER=pypi tox -e deploy
+description = Deploy the python package to be hosted in a pypi server. Requires to authenticate with the pypi
+    server, so please set the TWINE_PASSWORD and TWINE_PASSWORD environment variables.
+    Also, requires the PACKAGE_DIST_VERSION variable to explicitly indicate which distribution
+    (semantic version: ie 0.5.3, 1.0.0) we intent to deploy/upload. That way we avoid unintentionally deploying
+    a wrong version and we make sure that the correct version is released to pypi. By default, deploys to a
+    pypi 'test server', currently at test.pypi.org. If you want to deploy to the "production" pypi (at pypi.org),
+    then you have to set the PYPI_SERVER environment variable to 'pypi', like `export PYPI_SERVER=pypi`.
+    Before deploying, certain sanity checks are ran on the distribution artefacts (ie .tar.gz, .whl) to be uploaded.
+passenv =
+    PACKAGE_DIST_VERSION
+    TWINE_USERNAME
+    TWINE_PASSWORD
+deps =
+    keyring==21.3.0
+    twine==3.4.0
+skip_install = true
+commands_pre =
+    python -c 'import os; n = "TWINE_USERNAME"; v = os.environ.get(n); exec("if not v:\n    print(\"Please set the \" + str(n) + \" variable.\")\n    exit(1)");'
+    python -c 'import os; n = "TWINE_PASSWORD"; v = os.environ.get(n); exec("if not v:\n    print(\"Please set the \" + str(n) + \" variable.\")\n    exit(1)");'
+    python -c 'import os; n = "PACKAGE_DIST_VERSION"; v = os.environ.get(n); exec("if not v:\n    print(\"Please set the \" + str(n) + \" variable.\")\n    exit(1)");'
+    python -c 'import os; n = "PYPI_SERVER"; exec("if n in os.environ:\n    v = os.environ[n]\n    if v != \"pypi\":\n        print(\"Environment variable PYPI_SERVER detected, but was not set to pypi. Please set to pypi or run tox -e deploy from an environment where the PYPI_SERVER variable is NOT present at all.\")\n        exit(1)");'
+    python -m twine check {env:DIST_DIR}/{env:PY_PACKAGE}-{env:PACKAGE_DIST_VERSION:MISSMATCHED_PACKAGE_DIST_VERSION_ERROR}*
+commands =
+    twine {posargs:upload --non-interactive} --repository {env:PYPI_SERVER:testpypi --skip-existing} {env:DIST_DIR}{/}{env:PY_PACKAGE}-{env:PACKAGE_DIST_VERSION:MISSMATCHED_PACKAGE_DIST_VERSION_ERROR}* --verbose
+
+
+
 #####################################################################
 [testenv:report]
 deps = coverage
