--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -22,7 +22,8 @@ on:
 
 env:
   # Job Matrix as an env var !
-  FULL_MATRIX_STRATEGY: "{\"platform\": [\"ubuntu-latest\", \"macos-latest\", \"windows-latest\"], \"python-version\": [\"3.7\", \"3.8\", \"3.9\", \"3.10\", \"3.11\"]}"
+  # FULL_MATRIX_STRATEGY: "{\"platform\": [\"ubuntu-latest\", \"macos-latest\", \"windows-latest\"], \"python-version\": [\"3.7\", \"3.8\", \"3.9\", \"3.10\", \"3.11\"]}"
+  FULL_MATRIX_STRATEGY: "{\"platform\": [\"ubuntu-latest\", \"macos-latest\"], \"python-version\": [\"3.7\", \"3.8\", \"3.9\", \"3.10\", \"3.11\"]}"
   UBUNTU_PY310_STRATEGY: "{\"platform\":[\"ubuntu-latest\"], \"python-version\":[\"3.10\"]}"
   TEST_STRATEGY: "{\"platform\":[\"ubuntu-latest\", \"macos-latest\", \"windows-latest\"], \"python-version\":[\"3.9\"]}"
 
@@ -110,7 +111,12 @@ jobs:
         echo "PKG_VERSION=$WHEEL_VERSION" >> $GITHUB_ENV  # to be used in the next step
         echo "SEMVER_PIP_FORMAT=$WHEEL_VERSION" >> $GITHUB_OUTPUT  # to be used in other jobs
 
-    - name: Install external dependencies at runtime (todo move to build-time inside a custom image runner)
+    # TODO: provision those external dependencies at build-time through a custom docker image as runner
+    - name: Install external deps on MacOS
+      if: ${{ matrix.platform == 'macos-latest' }}
+      run: brew install graphviz
+    - name: Install external deps on Ubuntu
+      if: ${{ matrix.platform == 'ubuntu-latest' }}
       run: sudo apt-get update && sudo apt-get install -y --install-recommends ffmpeg
 
     - name: Run Unit Tests
