ci: enable automated pypi pulbish

--- a/tox.ini
+++ b/tox.ini
@@ -62,8 +62,43 @@ commands =
         {posargs:{toxinidir}{/}tests}
 
 
+[testenv:pinned]
+setenv =
+    DEFAULT_REQS_FILE = reqs-pinned.txt
+
+
+[testenv:pin-deps]
+description = Pin dependencies from poetry lock. Use the REQS_FILE var to override default
+    generated requirements file path (default inherited from testenv: reqs-pinned.txt).
+    By default adds the "test" 'extras' dependencies (from pyproject).
+    Eg `tox -e pin-deps` adds the dependencies from 'extras' labeled as "test".
+    Eg `DEPS_OVER= tox -e pin-deps` adds only production (root) dependencies.
+    Eg `DEPS_OVER="-E docs" tox -e pin-deps` adds the dependencies from 'extras' labeled as "docs".
+    Eg `REQS_FILE=reqs-test.txt tox -e pin-deps`
+basepython = {env:TOXPYTHON:python3}
+setenv =
+    {[pinned]setenv}
+passenv =
+    REQS_FILE
+    DEPS_OVER
+skip_install = true
+deps = poetry
+commands = poetry export -f requirements.txt -o {env:REQS_FILE:{env:DEFAULT_REQS_FILE}} {env:DEPS_OVER:-E test}
+
+# PATH
+[testenv:prod-test]
+description = Add Source Code to Path & Test
+basepython = {env:TOXPYTHON:python3}
+passenv = REQS_FILE
+setenv =
+    {[pinned]setenv}
+    PYTHONPATH = {toxinidir}{:}{toxinidir}{/}{env:PY_PACKAGE}{:}{toxinidir}{/}tests
+skip_install = true
+commands_pre = pip install -r {env:REQS_FILE:{env:DEFAULT_REQS_FILE}}
+
+
 [testenv:download-test-data]
-description = Install in 'edit' mode and test
+description = Download network-bound youtube video for preparing offline testing data.
 usedevelop = true
 changedir = {toxinidir}
 commands =
