--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -31,12 +31,12 @@ env:
   LINT_MATRIX: "{\"platform\":[\"ubuntu-latest\", \"macos-latest\", \"windows-latest\"], \"python-version\":[\"3.10\"]}"
 
   # On/Off switches for the various CI/CD steps
-  # If false the step prevented from running
+  # If false the step is prevented from running
   # If true the step is allowed to run (it still may be skipped on other runtime conditions)
   RUN_UNIT_TESTS: "true"
   RUN_LINT_CHECKS: "true"
   BUILD_DOCKER: "true"
-  PUBLISH_ON_PYPI: "false"
+  PUBLISH_ON_PYPI: "true"
   DRAW_DEPENDENCIES: "true"
 
 jobs:
