--- a/tox.ini
+++ b/tox.ini
@@ -62,7 +62,7 @@ commands =
         {posargs:{toxinidir}{/}tests}
 
 
-[testenv:pinned]
+[pinned]
 setenv =
     DEFAULT_REQS_FILE = reqs-pinned.txt
 
