--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -318,14 +318,14 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: echo "Platform is ${{ matrix.platform }}, Ptython is ${{ matrix.python-version }}"
-      # - name: Set up Python ${{ matrix.python-version }}
-      #   uses: actions/setup-python@v4
-      #   with:
-      #     python-version: ${{ matrix.python-version }}
-      # - name: Install dependencies
-      #   run: |
-      #     python -m pip install --upgrade pip
-      #     python -m pip install tox==3.28 tox-gh-actions
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install tox==3.28
       # - name: Lint check code with Isort and Black
       #   if: ${{ matrix.platform != 'windows-latest' }}
       #   run: tox -e lint -vv -s false
