deactivate pylint for test code

--- a/tox.ini
+++ b/tox.ini
@@ -333,7 +333,7 @@ usedevelop = true
 changedir = {toxinidir}
 commands =
     - python -m pylint src{/}{env:PY_PACKAGE}
-    - python -m pylint tests
+    ; - python -m pylint tests
 
 
 # GENERATE ARCHITECTURE GRAPHS
