--- a/tox.ini
+++ b/tox.ini
@@ -309,7 +309,7 @@ description = Run multiple static code analysis tools defined in .prospector.yml
     Python analysis tools such as Pyflakes and McCabe complexity.
     We run tools: Pyflakes, Pyroma, McCabe and Dodgy
 deps = prospector[with_pyroma] == 1.3.1
-skip_install = true
+usedevelop = true
 changedir = {toxinidir}
 commands_pre =
     # We do not run pylint, since we have a dedicated pylint env for it.
@@ -325,15 +325,15 @@ commands_post =
 
 [testenv:pylint]
 description = Run the Pylint tool to analyse the Python code and output
-    information about errors, potential problems and convention violations
+    information about errors, potential problems and convention-  violations
 deps =
     pylint ; python_version == '3.11'
     pylint == 2.7.4 ; python_version < '3.11'
 usedevelop = true
 changedir = {toxinidir}
 commands =
-    - python -m pylint src{/}{env:PY_PACKAGE}
-    ; - python -m pylint tests
+    - pylint {posargs:src{/}{env:PY_PACKAGE}}
+    ; - pylint tests
 
 
 # GENERATE ARCHITECTURE GRAPHS
