--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -118,7 +118,7 @@ jobs:
     # TODO: provision those external dependencies at build-time through a custom docker image as runner
     - name: Install external deps on MacOS
       if: ${{ matrix.platform == 'macos-latest' }}
-      run: brew install graphviz
+      run: brew install ffmpeg
     - name: Install external deps on Ubuntu
       if: ${{ matrix.platform == 'ubuntu-latest' }}
       run: sudo apt-get update && sudo apt-get install -y --install-recommends ffmpeg
